feat: Add admin actions on teams
